# to_do_list

./: .gitignore  README.md  initial_instructions.md  pyproject.toml
migrations/: env.py
migrations/versions/: 4972f0ff8d84_adicionando_coluna_updated_at.py  87d427860455_criando_tabela_todos.py  fdb85cfd4a7a_create_users_table.py
tests/: conftest.py  test_db.py  test_security.py  test_to_do_list.py
tests/auth/: test_auth.py
tests/todos/: test_todo.py
tests/users/: test_users.py
to_do_list/: models.py  schemas.py  security.py  to_do_list.py
to_do_list/routers/: auth.py  todos.py  users.py
utils/: key.py
