[tool.poetry]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = ["Franklin"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
httpie = "^3.2.2"
sqlalchemy = "^2.0.39"
pydantic-settings = "^2.8.1"
alembic = "^1.15.1"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev to_do_list/to_do_list.py'
run_open = 'fastapi dev to_do_list/to_do_list.py --host 0.0.0.0'
pre_test = 'task lint'
test = 'pytest -s --cov=to_do_list -vv'
post_test = 'coverage html'
lint = 'ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'
key = 'secrets.token_hex(356)'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
